[package]
name = "advanced"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thread_local = "1.1.7"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
thiserror = "1.0.52"
anyhow = "1.0.76"

