[package]
name = "transfer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb = { version = "2.8.0", features = ["bson-chrono-0_4", "tokio-runtime", "bson-serde_with"] }
serde = { version = "1.0.193", features = ["derive"] }
tokio = { version = "1.35.1", features = ["full"] }
serde_json = "1.0.108"
thiserror = "1.0.52"
mysql_async = { version = "0.33.0", default-features = false, features = [
    "default-rustls",
] }
mysql_common = {version = "0.31.0", features = ["chrono"]}
anyhow = "1.0.77"
chrono = "0.4.31"
time = { version = "0.3.31", features = ["serde-well-known"] }
